--- a/web_static/styles/103-footer.css
+++ b/web_static/styles/103-footer.css
@@ -4,7 +4,7 @@ footer{
 	width: 100%;
 	text-align: center;
 	bottom: 0%;
-	position:fixed;
+	position: absolute;
 	display: flex;
 	align-items: center;
 
@@ -15,8 +15,8 @@ footer{
 	border-top: 1px solid #CCCCCC;
 }
 body {
-  min-height: 100vh;
-  position: relative;
-  padding-bottom: 60px;
-  box-sizing: border-box;
+	min-height: 100vh;
+	position: relative;
+	padding-bottom: 60px;
+	box-sizing: border-box;
 }
